commit_1
this is a comprehensive